# vivace

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  updates.json
.github/workflows/: build.yml  nightly.yml  release.yml
help/bg/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/ca/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/cs/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/da/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/de/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/en/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/es/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/fi/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/fr/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/hr/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/hu/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/it/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/ja/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/ko/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/nl/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/pl/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/pt_BR/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/ru/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/sk/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/sv/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/tr/: command-line.md  menu-audio.md  menu-browse.md  menu-help.md  menu-open.md  menu-options.md  menu-play.md  menu-subtitles.md  menu-video.md  menu-view.md  overview.md
help/uk/: command-line.md  menu-audio.md  (+9 more)
icons/: vivace.rc
packaging/: README.md
patches/: qtmultimedia-av1-hwaccel-disable.patch  qtmultimedia-wsola-pitch-compensation.patch
qml/: AboutDialog.qml  AppMenu.qml  AppMenuItem.qml  BookmarksDialog.qml  CacheBrowserDialog.qml  CastDialog.qml  ControlBar.qml  FavoritesDialog.qml  FavoritesMenu.qml  FindSubtitlesDialog.qml  HelpDialog.qml  HelpMark.qml  Main.qml  MainMenuBar.qml  MainToolBar.qml  MediaInfoDialog.qml  OpenUrlDialog.qml  PlaylistEditor.qml  PlaylistPanel.qml  PlaylistWindow.qml  PrefAdvancedPage.qml  PrefDrivesPage.qml  PrefFileTypesPage.qml  PrefGeneralPage.qml  PrefInputPage.qml  PrefInterfacePage.qml  PrefNetworkPage.qml  PrefPlaylistPage.qml  PrefSubtitlesPage.qml  PrefTVPage.qml  PrefUpdatesPage.qml  PreferencesDialog.qml  Theme.qml  ToolbarEditor.qml  ToolbarItems.js  UpdateDialog.qml  VideoEqualizerDialog.qml  YoutubeSupportDialog.qml
shaders/: equalizer.frag
src/: bookmarks.cpp  bookmarks.h  castserver.cpp  castserver.h  chapterparser.cpp  chapterparser.h  dvdifoparser.cpp  dvdifoparser.h  dvdmenuparser.cpp  dvdmenuparser.h  dvdpciparser.cpp  dvdpciparser.h  dvdspu.cpp  dvdspu.h  dvdtitledevice.cpp  dvdtitledevice.h  dvdvm.cpp  dvdvm.h  externaldownloader.cpp  externaldownloader.h  favoritesmodel.cpp  favoritesmodel.h  filesettings.cpp  filesettings.h  httptssource.cpp  httptssource.h  livestreamdevice.cpp  livestreamdevice.h  main.cpp  mediacontrols.cpp  mediacontrols.h  mpris2.cpp  mpris2.h  networkproxy.cpp  networkproxy.h  opensubtitlesclient.cpp  opensubtitlesclient.h  playercontroller.cpp  playercontroller.h  playlistmodel.cpp  (+25 more)
translations/: vivace_ar.ts  vivace_bg.ts  vivace_ca.ts  vivace_cs.ts  vivace_da.ts  vivace_de.ts  vivace_es.ts  vivace_fa.ts  vivace_fi.ts  vivace_fr.ts  vivace_gd.ts  vivace_he.ts  vivace_hr.ts  vivace_hu.ts  vivace_it.ts  vivace_ja.ts  vivace_ka.ts  vivace_ko.ts  vivace_lg.ts  vivace_lv.ts  vivace_nl.ts  vivace_nn.ts  vivace_pl.ts  vivace_pt_BR.ts  vivace_ru.ts  vivace_sk.ts  vivace_sv.ts  vivace_tr.ts  vivace_uk.ts  vivace_zh_CN.ts  vivace_zh_TW.ts
(+33 files in other folders)
